# wasm-rust-play-video

./: .gitignore  Cargo.toml  README.md  index.html  styles.css  video.html  videoStyles.css
.cursor/: .cursor  mcp.json
src/: example.rs  lib.rs  logger.rs  mock_client.rs  post_client.rs  video.rs  video_js.rs
src/player/: dom.rs  download.rs  element_ids.rs  error.rs  event_listeners.rs  fullscreen.rs  menu.rs  mod.rs  mute.rs  picture_in_picture.rs  play_pause.rs  playback_speed.rs  player.rs  state.rs  time.rs  video.rs
src/rest/: example.rs  mod.rs  post_client.rs
src/video/: mod.rs  video.rs
static/rest/: index.html  styles.css
static/video/: index.html
