[package]
name = "wasm-rust-play-video"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly project for video playback using Rust"
repository = "https://github.com/ReddeR/wasm-rust-play-video"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Document",
    "Element",
    "HtmlVideoElement",
    "console"
] }
js-sys = "0.3"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
debug = true
